package netmsg;

message MsgPack
{
	required	MsgHead								head							= 1;
	optional 	RegistTypeMsg						registtype						= 2;
	optional	RegistTypeMsgResult					registtypemsgresult				= 3;
																					  
	optional 	QueryDevCntMsg						querydevcntmsg					= 4;
	optional 	QueryDevCntMsgResult				querydevcntmsgresult			= 5;

	optional	QueryMsg  							query							= 6;
	optional	AddMsg  							add								= 7;

	optional	QueryMsgResult  					querymsgresult					= 8;
	optional	AddMsgResult  						addmsgresult					= 9;

	optional	ExcuteSqlMsg  						excutesqlmsg					= 10;
	optional	ExcuteSqlMsgResult  				excutesqlmsgresult				= 11;

	optional	QueryDevSpeedMsg  					querydevspeedmsg				= 12;
	optional	QueryDevSpeedMsgResult  			querydevspeedmsgresult			= 13;

	optional	QueryConnectionsStrMsg  			queryconnectionsstrmsg			= 14;
	optional	QueryConnectionsStrMsgResult  		queryconnectionsstrmsgresult	= 15;

	optional	AddVersionMsg  						addversionmsg					= 20;
	optional	AddVersionMsgResult  				addversionmsgresult				= 21;

	optional	UpgradeMsg  						upgrademsg						= 50;
	optional	UpgradeDownLoadMsg  				upgradedownloadmsg				= 51;
	optional	UpgradeDownLoadMsgResult  			upgradedownloadmsgresult		= 52;
	optional	UpgradeMsgResult  					upgrademsgresult				= 53;
	

}

message MsgHead{
	required	uint32				globalPackNumber		= 1 [default = 1]; 
    required	int32				totalPack				= 2 [default = 1];        
    required	int32				packIndex				= 3 [default = 0];               
}

message RegistTypeMsg{
	required	bool				bDevice					= 1;
	required	string				ip						= 2;
	required	string				serverip				= 3;
	required	bool				bNormal					= 4;
}

message RegistTypeMsgResult{

}

message QueryDevCntMsg{

}

message QueryDevCntMsgResult{
	required	int32				devCnt					= 1;
}

message QueryConnectionsStrMsg{

}

message QueryConnectionsStrMsgResult{
	required	string				resultData				= 1;
	required	string				resultError				= 2;
}

message QueryMsg{
	required	string				Msg						= 1;
}

message QueryMsgResult{
	required	string				resultData				= 1;
	required	string				resultError				= 2;
}

message AddMsg{
	required	string				TableName				= 1;
	required	string				Msg						= 2;
}

message AddMsgResult{
	required	string				resultError				= 1;
}

message ExcuteSqlMsg{
	required	string				Msg						= 1;
}

message ExcuteSqlMsgResult{
	required	string				resultError				= 1;
}

message QueryDevSpeedMsg{
	required	string				ipStr					= 1;
	required	int32				askUserID				= 2;
	required	int64				startTime				= 3;
}

message QueryDevSpeedMsgResult{
	required	int32				speed					= 1;
	required	string				resultError				= 2;
}

message UpgradeMsg{
	required	string				ip					    = 1;
	required	string				version					= 2;
}

message AddVersionMsg{
	required	string				Bianhao					= 1;
	required	string				Banbenhao				= 2;
	required	bytes				Anzhuangbao				= 3;
}
message AddVersionMsgResult{
	required	string				resultData				= 1;
	required	string				resultError				= 2;
}

message UpgradeDownLoadMsg{
	required	bytes				seteupData				= 1;
	required	string				resultError				= 2;
}

message UpgradeDownLoadMsgResult{
	required	string				resultData				= 1;
	required	string				resultError				= 2;
}

message UpgradeMsgResult{
	required	string				resultData				= 1;
	required	string				resultError				= 2;
}